[package]
name = "kernel"
version = "0.1.0"
authors = ["Gary Moore <madmangaz@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.16", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.5"
uart_16550 = "0.2.12"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300          # (in seconds)
test-success-exit-code = 33 # (0x10 << 1) | 1


# Integration tests with disabled unit testing framework.
# This is usually to support should_panic type functionality.
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
